apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__it_does_not_leak_env_variable_values.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
apollo::configuration::expansion

  × could not expand configuration values
  ╰─▶ could not expand configuration values

Error: apollo::configuration::expansion_not_a_boolean

  × expanded value is not a boolean
   ╭─[3:18]
 2 │ supergraph:
 3 │   introspection: ${env.TEST_CONFIG_NUMERIC_ENV_UNIQUE:-true}
   ·                  ─────────────────────┬─────────────────────
   ·                                       ╰── this value does not parse as a boolean
 4 │         
   ╰────
  help: the schema declares this field as a boolean; use `true` or `false`
