apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__schema_generation.snap
---
source: apollo-router/src/configuration/mod.rs
assertion_line: 593
expression: "&schema"

---
$schema: "http://json-schema.org/draft-07/schema#"
title: Configuration
description: The configuration for the router. Currently maintains a mapping of subgraphs.
type: object
properties:
  graph:
    description: Studio Graph configuration.
    default: ~
    allOf:
      - $ref: "#/definitions/StudioGraph"
    nullable: true
  opentelemetry:
    description: OpenTelemetry configuration.
    allOf:
      - $ref: "#/definitions/OpenTelemetry"
    nullable: true
  plugins:
    description: Plugin configuration
    default: {}
    type: object
    additionalProperties: true
  server:
    description: Configuration options pertaining to the http server component.
    default:
      listen: "127.0.0.1:4000"
      cors: ~
    allOf:
      - $ref: "#/definitions/Server"
  spaceport:
    description: Spaceport configuration.
    default: ~
    allOf:
      - $ref: "#/definitions/SpaceportConfig"
    nullable: true
  subgraphs:
    description: Mapping of name to subgraph that the router may contact.
    default: {}
    type: object
    additionalProperties:
      $ref: "#/definitions/Subgraph"
additionalProperties: false
definitions:
  Conf:
    type: object
    required:
      - name
    properties:
      name:
        type: string
  Cors:
    description: Cross origin request configuration.
    type: object
    properties:
      allow_any_origin:
        description: "Set to false to disallow any origin and rely exclusively on `origins`.\n\n/!\\ Defaults to true Having this set to true is the only way to allow Origin: null."
        default: ~
        type: boolean
        nullable: true
      allow_credentials:
        description: "Set to true to add the `Access-Control-Allow-Credentials` header."
        default: ~
        type: boolean
        nullable: true
      allow_headers:
        description: The headers to allow. Defaults to the required request header for Apollo Studio
        default:
          - Content-Type
        type: array
        items:
          type: string
      expose_headers:
        description: "Which response headers should be made available to scripts running in the browser, in response to a cross-origin request."
        default: ~
        type: array
        items:
          type: string
        nullable: true
      methods:
        description: "Allowed request methods. Defaults to GET, POST, OPTIONS."
        default:
          - GET
          - POST
          - OPTIONS
        type: array
        items:
          type: string
      origins:
        description: "The origin(s) to allow requests from. Use `https://studio.apollographql.com/` to allow Apollo Studio to function."
        default: []
        type: array
        items:
          type: string
    additionalProperties: false
  InsertConfig:
    type: object
    required:
      - name
      - value
    properties:
      name:
        type: string
      value:
        type: string
  ListenAddr:
    description: Listening address.
    anyOf:
      - description: Socket address.
        type: string
      - description: Unix socket.
        type: string
  OpenTelemetry:
    $ref: "#/definitions/OpenTelemetry"
  PropagateConfig:
    oneOf:
      - type: object
        required:
          - matching
        properties:
          matching:
            type: object
            properties:
              regex:
                default: ".*"
                type: string
        additionalProperties: false
      - type: object
        required:
          - named
        properties:
          named:
            type: object
            required:
              - name
            properties:
              default_value:
                type: string
                nullable: true
              name:
                type: string
              rename:
                type: string
                nullable: true
        additionalProperties: false
  RemoveConfig:
    oneOf:
      - type: object
        required:
          - name
        properties:
          name:
            type: string
        additionalProperties: false
      - type: object
        required:
          - matching
        properties:
          matching:
            type: object
            properties:
              regex:
                default: ".*"
                type: string
        additionalProperties: false
  Server:
    description: Configuration options pertaining to the http server component.
    type: object
    properties:
      cors:
        description: Cross origin request headers.
        default: ~
        allOf:
          - $ref: "#/definitions/Cors"
        nullable: true
      listen:
        description: "The socket address and port to listen on Defaults to 127.0.0.1:4000"
        default: "127.0.0.1:4000"
        allOf:
          - $ref: "#/definitions/ListenAddr"
    additionalProperties: false
  SpaceportConfig:
    type: object
    required:
      - external
    properties:
      collector:
        default: "https://127.0.0.0:50051"
        type: string
      external:
        type: boolean
      listener:
        default: "0.0.0.0:50051"
        type: string
    additionalProperties: false
  StudioGraph:
    type: object
    required:
      - key
      - reference
    properties:
      key:
        type: string
      reference:
        type: string
    additionalProperties: false
  Subgraph:
    properties:
      layers:
        items:
          oneOf:
            - required:
                - example.com_hello
            - required:
                - headers_insert
            - required:
                - headers_propagate
            - required:
                - headers_remove
          properties:
            example.com_hello:
              $ref: "#/definitions/Conf"
            headers_insert:
              $ref: "#/definitions/InsertConfig"
            headers_propagate:
              $ref: "#/definitions/PropagateConfig"
            headers_remove:
              $ref: "#/definitions/RemoveConfig"

