apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@entity_cache_preview2.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
preview_entity_cache:
  enabled: true
  subgraph:
    subgraphs:
      accounts:
        enabled: false
      products:
        ttl: 120s
    all:
      redis:
        urls:
          - "redis://localhost:6379"
        timeout: 5ms
        ttl: 60s
