apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@promote-experimental-flags.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 684
expression: new_config
---
---
supergraph:
  query_planning:
    plans_limit: 100
    paths_limit: 50
  log_on_broken_pipe: true
traffic_shaping:
  all:
    http2: enable
  subgraphs:
    accounts:
      http2: enable
coprocessor:
  url: "http://example.com"
  client:
    http2: enable
telemetry:
  exporters:
    tracing:
      response_trace_id:
        enabled: true
