apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@promote-expose-query-plan.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
plugins: {}
expose_query_plan: true
