apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@query_plan_cache.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
supergraph:
  query_planning:
    cache:
      redis:
        urls: []

