apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@response_cache_preview.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
response_cache:
  enabled: true
  subgraph:
    all:
      redis:
        urls:
          - "redis://test"
        required_to_start: true
      enabled: true
      invalidation:
        enabled: true
        shared_key: invalidate
    subgraphs:
      accounts:
        enabled: false
      products:
        ttl: 120s
        invalidation:
          enabled: true
          shared_key: invalidate
