apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@static-string-selector-deprecated.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  instrumentation:
    spans:
      router:
        attributes:
          my.static.attribute: deprecated static string value
