apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@subscription_dedup_subgraph.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
subscription:
  deduplication:
    all:
      enabled: true
      ignored_headers:
        - authorization
        - x-user-id
  enabled: true
