apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@subscription_enabled.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
subscription:
  enabled: true

